kubernetes/aks/frontend-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hybrid-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hybrid-frontend
  template:
    metadata:
      labels:
        app: hybrid-frontend
    spec:
      containers:
      - name: hybrid-frontend
        image: techwithdiwana/hybrid-frontend:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: hybrid-frontend-service
spec:
  type: LoadBalancer
  selector:
    app: hybrid-frontend
  ports:
  - port: 80
    targetPort: 3000
